# NPULearn

./: .gitignore  LICENSE  NOTICE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docs/: NPULearn CoT技术文档.typ  NPULearn技术文档.typ  NPULearn技术文档_new.typ  NPULearn需求文档.typ  技术文档.md  技术设计思路.md  需求文档.typ
icon/: npulearn.xcf
src/: App.vue  markdownStyles.ts  mathjax.d.ts  style.css  themeUtils.ts
src-tauri/: 2  Cargo.toml  libcoze.rlib  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: chatHistory.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai_utils/: mathworld.rs  mod.rs  online_python_exec.rs  wolframalpha.rs
src-tauri/src/aibackend/: apikey.rs  coze.rs  deepseek.rs  gemini.rs  interface.rs  mod.rs  openai_types.rs  template.rs  test_gemini.rs
src-tauri/src/document_reader/: mod.rs  pdf_reader.rs  text_reader.rs  word_reader.rs
src-tauri/src/document_renderer/: mod.rs  renderer.rs  style.rs  wolfram.rs
src-tauri/src/history_msg/: history.rs  mod.rs
src-tauri/src/history_msg/test/: history.rs
src-tauri/src/multi_platform/android/: android_file_utils.rs  mod.rs
src-tauri/src/setting/: setting.rs
src/App/: chatHistory.ts  eventBus.ts  main.ts  mathjax.ts  mermaidRenderer.ts  types.ts
src/App/typesetting/: htmlRenderer.ts  interactiveButton.ts  katexRenderer.ts  mermaidRenderer.ts  pintoraRenderer.ts  typesetting.ts  typstRenderer.ts  wolframRenderer.ts
src/assets/: global.css  logo.xcf
src/components/: LoadingLogo.vue  Setting.vue
src/composables/: useSettings.ts
src/styles/: json-tree-view.css
src/workers/: renderWorker.ts
