[package]
name = "npulearn"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "npulearn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
chrono = "0.4"
once_cell = "1.8.0"
tauri-plugin-fs = "2"
comrak = "0.36.0"
tauri-plugin-clipboard-manager = "2"
rand = "0.9.0"
tauri-plugin-dialog = "2"
tokio = { version = "1.44.2", features = ["full"] }
openai-api-rs = "6.0.3"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
base64 = "0.21.0"
futures-util = "0.3.31"
xlang_frontend = "0.1.2"
