[package]
name = "npulearn"
version = "0.2.1"
description = "NPULearn - 智能学习助手桌面应用"
authors = ["NPULearn Contributors"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "npulearn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
once_cell = "1.8.0"
tauri-plugin-fs = "2"
comrak = "0.36.0"
tauri-plugin-clipboard-manager = "2"
rand = "0.9.0"
tauri-plugin-dialog = "2"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "io-util", "fs", "time"], default-features = false }
regex = "1.11.1"
base64 = "0.21.0"
futures-util = "0.3.31"
xlang_frontend = "0.1.2"
futures = "0.3"
url = "2.3"
ammonia = "4.1.0"
reqwest = { version = "0.12.15", features = ["json", "stream", "rustls-tls"], default-features = false }
tauri-plugin-http = "2.4.3"
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
html-escape = "0.2.13"
log = "0.4.20"
scraper = "0.17"
percent-encoding = "2.3"
urlencoding = "2.1"
# Document processing dependencies
zip = "0.6"
xml = "0.8"
encoding_rs = "0.8"
chardet = "0.2"
